<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="hint_product_name">Product name</string>
    <string name="add_to_inventory">Add to inventory</string>
    <string name="submit_button">Submit</string>
</resources>
